<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".userinterface.UserActivity">

    <TextView
        android:id="@+id/text_vamos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/iniciar_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp">

    </TextView>

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_vamos"
        android:layout_marginTop="300dp"
        android:autofillHints="name"
        android:hint="@string/nome"
        android:inputType="text"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        tools:ignore="LabelFor">

    </EditText>


    <androidx.appcompat.widget.AppCompatButton

        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:background="@color/black"
        android:id="@+id/button_new10"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_nome"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/salvar">

    </androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>