<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".userinterface.MainActivity">


    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/purple">

        <ImageView
            android:id="@+id/image_infinity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:src="@drawable/infinity">

        </ImageView>

        <ImageView
            android:id="@+id/image_child"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/child" />

        <ImageView
            android:id="@+id/image_sun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:src="@drawable/sun">

        </ImageView>

    </LinearLayout>

    <TextView

        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_menu"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/hello"
        android:textAllCaps="true"
        android:textColor="@color/black">

    </TextView>


    <TextView
        android:id="@+id/text_textmmm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/motivation"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>

    <View
        android:id="@+id/view_view1"
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_below="@+id/text_textmmm"
        android:layout_centerInParent="true"
        android:background="@color/purple"
        android:elevation="10dp">

    </View>

    <Button
        android:id="@+id/button_new1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple"
        android:text="@string/new_frase"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp">

    </TextView>


</RelativeLayout>